syntax = "proto3";

package resdb;

message RocksDBInfo {
  bool enable_rocksdb = 1;
  uint32 num_threads = 2;
  uint32 write_buffer_size_mb = 3;
  uint32 write_batch_size = 4;
  string path = 5;
  bool generate_unique_pathnames = 6;
}

message LevelDBInfo {
  bool enable_leveldb = 1;
  uint32 write_buffer_size_mb = 2;
  uint32 write_batch_size = 3;
  string path = 4;
  bool generate_unique_pathnames = 5;
}
